@@ -9,6 +9,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Support +=, -=, etc, and ++, -- operators. [Sean de la Haye]
 
+****	Support "cover property."
+
 ****	Fix syntax error when "`include `defname" is ifdefed.  [John Dickol]
 
 ****	Fix error when macro call has commas in concatenate. [John Dickol]
